--- a/waste-classification.ipynb
+++ b/waste-classification.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding the Convoluional Layers\n",
+    "### Adding the Convolutional Layers\n",
     "We are using 3 convolutional layers to with a **ReLU** activation and followed by **max-pooling** layers. This is very similar to the architectures that Yann LeCun advocated in the 1990s for image classification."
    ]
   },
